test/sema/typeck/return/return-unit-with-value.out
error: `return` expects value of type `()` but got `Int32`.
--> return-unit-with-value.dora:1:10
 | fn f() { return 1i32; }
            ~~~~~~~~~~~
 | 
1 error found.
