test/sema/typeck/return/return-unit-with-value.dora
fn f() { return 1i32; }
